# da7281-nrf52-hal

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  Doxyfile  LICENSE  README.md  init_git_repo.sh
.github/workflows/: build.yml
docs/: ARCHITECTURE.md
examples/: haptics_test_task.c
include/: da7281.h
src/: da7281.c  da7281_init.c
